--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 
 <p><a href="https://github.com/miguelvb/visualDataPresentation"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a></p>
 
+<pre><code>## Warning: there is no package called &#39;ffbase&#39;
+</code></pre>
+
 <h2>Visualize Data</h2>
 
 <p><br/></p>
@@ -9033,14 +9036,14 @@ sanPlot$set(
 
 <slide class="" id="slide-21" style="background:;">
   <article data-timings="">
-    <div id = 'chart58c1a53c1' class = 'rChart d3_sankey'></div>
+    <div id = 'chart1c521070a640' class = 'rChart d3_sankey'></div>
 
 <p>﻿<div class="ed"> </div></p>
 
 <script>
 (function(){
 var params = {
- "dom": "chart58c1a53c1",
+ "dom": "chart1c521070a640",
 "width":    960,
 "height":    500,
 "data": {
@@ -9051,7 +9054,7 @@ var params = {
 "nodeWidth":     15,
 "nodePadding":     10,
 "layout":     32,
-"id": "chart58c1a53c1" 
+"id": "chart1c521070a640" 
 };
 
 params.units ? units = " " + params.units : units = "";
@@ -11952,11 +11955,11 @@ a$chart(zoomType = &quot;xy&quot;)
 <p>Database: Sample of Cervical Screening Database (Denmark). </p>
 
 <ul>
-<li><a href="../d3s//bubble.html">ZOOMABLE BUBBLE</a></li>
-<li><a href="../d3s/bubble_no_prop.html">ZOOMABLE BUBBLE NO SIZES</a></li>
-<li><a href="../d3s/tree_layout.html">INTERACTIVE TREE LAYOUT</a></li>
-<li><a href="../d3s/treemap.html">ZOOMABLE TREE MAP</a></li>
-<li><a href="../d3s/treemap_noprop.html">ZOOMABLE TREE MAP, NO SIZES</a></li>
+<li><a href="http://miguelvb.github.io/visualDataPresentation/d3s/bubble.html">ZOOMABLE BUBBLE</a></li>
+<li><a href="http://miguelvb.github.io/visualDataPresentation/d3s/bubble_no_prop.html">ZOOMABLE BUBBLE NO SIZES</a></li>
+<li><a href="http://miguelvb.github.io/visualDataPresentation/d3s/tree_layout.html">INTERACTIVE TREE LAYOUT</a></li>
+<li><a href="http://miguelvb.github.io/visualDataPresentation/d3s/treemap.html">ZOOMABLE TREE MAP</a></li>
+<li><a href="http://miguelvb.github.io/visualDataPresentation/d3s/treemap_noprop.html">ZOOMABLE TREE MAP, NO SIZES</a></li>
 </ul>
 
   </article>
