--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <article data-timings="">
     <blockquote>
 <p>The ggplot2 package, created by Hadley Wickham, offers a powerful graphics language for creating elegant and complex plots. 
-It is unlike most other graphics packages because it has a deep underlying grammar.</p>
+It is unlike most other graphics packages because it has a deep underlying grammar</p>
 </blockquote>
 
   </article>
